--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="">
 
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="CSS.css">
 	<script src="JS.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>savy's penguin site</title>
@@ -14,7 +14,7 @@
 <h1 id="header">penguin</h1>
 
 <div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
+  <button id="dropbtn" class="dropbtn">MENU</button>
   <div class="dropdown-content">
     <button class="tablinks" onclick="tabs(event, 'home')">home</button>
     <button class="tablinks" onclick="tabs(event, 'facts')">facts</button>
