add mystery button and formatting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
 <h1 id="header">penguin</h1>
-
 <div class="dropdown">
   <button id="dropbtn" class="dropbtn">MENU</button>
   <div class="dropdown-content">
@@ -24,6 +23,7 @@
 <div id="home" class="tabcontent">
 	<h2 id="homeH2">home page</h2>
 	<p>penguins </p>
+	<button id="MysteryButton" name="button">Mystery Button??</button>
 </div>
 
 <div id="facts" class="tabcontent">
@@ -35,8 +35,6 @@
 	<li>Penguins are flightless birds.</li>
 	<li>Penguins in Antarctica have no land based predators</li>
 </ul>
-
-
 </div>
 
 <div id="photos" class="tabcontent">
