no mystery button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <div id="home" class="tabcontent">
 	<h2 id="homeH2">home page</h2>
 	<p>penguins </p>
-	<button id="MysteryButton" name="button">Mystery Button??</button>
+	<!-- <button id="MysteryButton" name="button">Mystery Button??</button> -->
+
 </div>
 
 <div id="facts" class="tabcontent">
